Add double carousel gallery with opposite movements

--- a/index.html
+++ b/index.html
@@ -59,24 +59,76 @@
 
     <section id="galeria" class="gallery">
         <h2>Galería de Imágenes</h2>
-        <div class="gallery-grid">
-            <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1600596542815-ffad4c153aee9" alt="Fachada de la casa">
+        <div class="carousel-container">
+            <div class="carousel-track top-track">
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
             </div>
-            <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Sala de estar">
-            </div>
-            <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1600607687939-ce8a6c25118c" alt="Cocina">
-            </div>
-            <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1600607687644-9b2d3c3c0c1c" alt="Dormitorio">
-            </div>
-            <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1600607687920-4e2a09cf159d" alt="Baño">
-            </div>
-            <div class="gallery-item">
-                <img src="https://images.unsplash.com/photo-1600607687644-9b2d3c3c0c1c" alt="Jardín">
+            <div class="carousel-track bottom-track">
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
+                <div class="carousel-slide">
+                    <img src="images/img.webp" alt="Imagen de la casa">
+                </div>
             </div>
         </div>
     </section>
