--- a/index.html
+++ b/index.html
@@ -62,72 +62,72 @@
         <div class="carousel-container">
             <div class="carousel-track top-track">
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
             </div>
             <div class="carousel-track bottom-track">
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/img.webp" alt="Imagen de la casa">
+                    <img src="images/img.jpg" alt="Imagen de la casa">
                 </div>
             </div>
         </div>
