feat: implementa galería de imágenes con modal y navegación

--- a/index.html
+++ b/index.html
@@ -59,76 +59,56 @@
 
     <section id="galeria" class="gallery">
         <h2>Galería de Imágenes</h2>
-        <div class="carousel-container">
-            <div class="carousel-track top-track">
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
+        <div class="gallery-grid">
+            <div class="gallery-item" data-index="0">
+                <img src="images/img.webp" alt="Imagen de la casa">
             </div>
-            <div class="carousel-track bottom-track">
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
-                <div class="carousel-slide">
-                    <img src="images/img.jpg" alt="Imagen de la casa">
-                </div>
+            <div class="gallery-item" data-index="1">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="2">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="3">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="4">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="5">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="6">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="7">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="8">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="9">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="10">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="11">
+                <img src="images/img.webp" alt="Imagen de la casa">
+            </div>
+        </div>
+
+        <!-- Modal para ver las imágenes -->
+        <div class="gallery-modal">
+            <button class="modal-close">&times;</button>
+            <button class="modal-prev">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="modal-next">
+                <i class="fas fa-chevron-right"></i>
+            </button>
+            <div class="modal-content">
+                <img src="" alt="Imagen ampliada">
             </div>
         </div>
     </section>
