--- a/index.html
+++ b/index.html
@@ -61,40 +61,73 @@
         <h2>Galería de Imágenes</h2>
         <div class="gallery-grid">
             <div class="gallery-item" data-index="0">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house1.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="1">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house2.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="2">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house3.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="3">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house4.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="4">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house5.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="5">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house6.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="6">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house7.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="7">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house8.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="8">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house9.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="9">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house10.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="10">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house11.HEIC" alt="Imagen de la casa">
             </div>
             <div class="gallery-item" data-index="11">
-                <img src="images/img.webp" alt="Imagen de la casa">
+                <img src="images/house12.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="12">
+                <img src="images/house13.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="13">
+                <img src="images/house14.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="14">
+                <img src="images/house15.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="15">
+                <img src="images/house16.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="16">
+                <img src="images/house17.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="17">
+                <img src="images/house18.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="18">
+                <img src="images/house19.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="19">
+                <img src="images/house20.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="20">
+                <img src="images/house21.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="21">
+                <img src="images/house22.HEIC" alt="Imagen de la casa">
+            </div>
+            <div class="gallery-item" data-index="22">
+                <img src="images/house23.HEIC" alt="Imagen de la casa">
             </div>
         </div>
 
