fix: convierte imágenes HEIC a formatos web compatibles (JPG y WebP)

--- a/index.html
+++ b/index.html
@@ -57,92 +57,157 @@
         </div>
     </section>
 
-    <section id="galeria" class="gallery">
+    <section class="gallery" id="gallery">
         <h2>Galería de Imágenes</h2>
         <div class="gallery-grid">
             <div class="gallery-item" data-index="0">
-                <img src="images/house1.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house1.webp" type="image/webp">
+                    <img src="images/converted/house1.jpg" alt="Imagen de la casa 1" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="1">
-                <img src="images/house2.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house2.webp" type="image/webp">
+                    <img src="images/converted/house2.jpg" alt="Imagen de la casa 2" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="2">
-                <img src="images/house3.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house3.webp" type="image/webp">
+                    <img src="images/converted/house3.jpg" alt="Imagen de la casa 3" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="3">
-                <img src="images/house4.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house4.webp" type="image/webp">
+                    <img src="images/converted/house4.jpg" alt="Imagen de la casa 4" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="4">
-                <img src="images/house5.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house5.webp" type="image/webp">
+                    <img src="images/converted/house5.jpg" alt="Imagen de la casa 5" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="5">
-                <img src="images/house6.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house6.webp" type="image/webp">
+                    <img src="images/converted/house6.jpg" alt="Imagen de la casa 6" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="6">
-                <img src="images/house7.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house7.webp" type="image/webp">
+                    <img src="images/converted/house7.jpg" alt="Imagen de la casa 7" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="7">
-                <img src="images/house8.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house8.webp" type="image/webp">
+                    <img src="images/converted/house8.jpg" alt="Imagen de la casa 8" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="8">
-                <img src="images/house9.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house9.webp" type="image/webp">
+                    <img src="images/converted/house9.jpg" alt="Imagen de la casa 9" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="9">
-                <img src="images/house10.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house10.webp" type="image/webp">
+                    <img src="images/converted/house10.jpg" alt="Imagen de la casa 10" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="10">
-                <img src="images/house11.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house11.webp" type="image/webp">
+                    <img src="images/converted/house11.jpg" alt="Imagen de la casa 11" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="11">
-                <img src="images/house12.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house12.webp" type="image/webp">
+                    <img src="images/converted/house12.jpg" alt="Imagen de la casa 12" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="12">
-                <img src="images/house13.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house13.webp" type="image/webp">
+                    <img src="images/converted/house13.jpg" alt="Imagen de la casa 13" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="13">
-                <img src="images/house14.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house14.webp" type="image/webp">
+                    <img src="images/converted/house14.jpg" alt="Imagen de la casa 14" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="14">
-                <img src="images/house15.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house15.webp" type="image/webp">
+                    <img src="images/converted/house15.jpg" alt="Imagen de la casa 15" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="15">
-                <img src="images/house16.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house16.webp" type="image/webp">
+                    <img src="images/converted/house16.jpg" alt="Imagen de la casa 16" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="16">
-                <img src="images/house17.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house17.webp" type="image/webp">
+                    <img src="images/converted/house17.jpg" alt="Imagen de la casa 17" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="17">
-                <img src="images/house18.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house18.webp" type="image/webp">
+                    <img src="images/converted/house18.jpg" alt="Imagen de la casa 18" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="18">
-                <img src="images/house19.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house19.webp" type="image/webp">
+                    <img src="images/converted/house19.jpg" alt="Imagen de la casa 19" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="19">
-                <img src="images/house20.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house20.webp" type="image/webp">
+                    <img src="images/converted/house20.jpg" alt="Imagen de la casa 20" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="20">
-                <img src="images/house21.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house21.webp" type="image/webp">
+                    <img src="images/converted/house21.jpg" alt="Imagen de la casa 21" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="21">
-                <img src="images/house22.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house22.webp" type="image/webp">
+                    <img src="images/converted/house22.jpg" alt="Imagen de la casa 22" loading="lazy">
+                </picture>
             </div>
             <div class="gallery-item" data-index="22">
-                <img src="images/house23.jpg" alt="Imagen de la casa">
+                <picture>
+                    <source srcset="images/converted/house23.webp" type="image/webp">
+                    <img src="images/converted/house23.jpg" alt="Imagen de la casa 23" loading="lazy">
+                </picture>
             </div>
         </div>
 
-        <!-- Modal para ver las imágenes -->
+        <!-- Modal para la galería -->
         <div class="gallery-modal">
             <button class="modal-close">&times;</button>
-            <button class="modal-prev">
-                <i class="fas fa-chevron-left"></i>
-            </button>
-            <button class="modal-next">
-                <i class="fas fa-chevron-right"></i>
-            </button>
             <div class="modal-content">
                 <img src="" alt="Imagen ampliada">
             </div>
+            <button class="modal-prev">&lt;</button>
+            <button class="modal-next">&gt;</button>
         </div>
     </section>
 
