test images from drive

--- a/index.html
+++ b/index.html
@@ -61,142 +61,40 @@
         <h2>Galería de Imágenes</h2>
         <div class="gallery-grid">
             <div class="gallery-item" data-index="0">
-                <picture>
-                    <source srcset="images/converted/house1.webp" type="image/webp">
-                    <img src="images/converted/house1.jpg" alt="Imagen de la casa 1" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/file/d/1EE8FNmkDIxhradMhfrrhvqLi92gtw-4w/view?usp=sharing" alt="Imagen de la casa 1" loading="lazy">
             </div>
             <div class="gallery-item" data-index="1">
-                <picture>
-                    <source srcset="images/converted/house2.webp" type="image/webp">
-                    <img src="images/converted/house2.jpg" alt="Imagen de la casa 2" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/file/d/1pLLdfzYIehuV4w9LfytT6FRQfPUUdZn3/view?usp=sharing" alt="Imagen de la casa 2" loading="lazy">
             </div>
             <div class="gallery-item" data-index="2">
-                <picture>
-                    <source srcset="images/converted/house3.webp" type="image/webp">
-                    <img src="images/converted/house3.jpg" alt="Imagen de la casa 3" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/file/d/1_ypvWzzsWDhTGlrqWaOqJDE_qHy4mGqL/view?usp=sharing" alt="Imagen de la casa 3" loading="lazy">
             </div>
             <div class="gallery-item" data-index="3">
-                <picture>
-                    <source srcset="images/converted/house4.webp" type="image/webp">
-                    <img src="images/converted/house4.jpg" alt="Imagen de la casa 4" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/file/d/1ZZHMuhCWkUIiNHAwK2UQ_zGzjtEwDP2F/view?usp=sharing" alt="Imagen de la casa 4" loading="lazy">
             </div>
             <div class="gallery-item" data-index="4">
-                <picture>
-                    <source srcset="images/converted/house5.webp" type="image/webp">
-                    <img src="images/converted/house5.jpg" alt="Imagen de la casa 5" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_5" alt="Imagen de la casa 5" loading="lazy">
             </div>
             <div class="gallery-item" data-index="5">
-                <picture>
-                    <source srcset="images/converted/house6.webp" type="image/webp">
-                    <img src="images/converted/house6.jpg" alt="Imagen de la casa 6" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_6" alt="Imagen de la casa 6" loading="lazy">
             </div>
             <div class="gallery-item" data-index="6">
-                <picture>
-                    <source srcset="images/converted/house7.webp" type="image/webp">
-                    <img src="images/converted/house7.jpg" alt="Imagen de la casa 7" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_7" alt="Imagen de la casa 7" loading="lazy">
             </div>
             <div class="gallery-item" data-index="7">
-                <picture>
-                    <source srcset="images/converted/house8.webp" type="image/webp">
-                    <img src="images/converted/house8.jpg" alt="Imagen de la casa 8" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_8" alt="Imagen de la casa 8" loading="lazy">
             </div>
             <div class="gallery-item" data-index="8">
-                <picture>
-                    <source srcset="images/converted/house9.webp" type="image/webp">
-                    <img src="images/converted/house9.jpg" alt="Imagen de la casa 9" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_9" alt="Imagen de la casa 9" loading="lazy">
             </div>
             <div class="gallery-item" data-index="9">
-                <picture>
-                    <source srcset="images/converted/house10.webp" type="image/webp">
-                    <img src="images/converted/house10.jpg" alt="Imagen de la casa 10" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_10" alt="Imagen de la casa 10" loading="lazy">
             </div>
             <div class="gallery-item" data-index="10">
-                <picture>
-                    <source srcset="images/converted/house11.webp" type="image/webp">
-                    <img src="images/converted/house11.jpg" alt="Imagen de la casa 11" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_11" alt="Imagen de la casa 11" loading="lazy">
             </div>
             <div class="gallery-item" data-index="11">
-                <picture>
-                    <source srcset="images/converted/house12.webp" type="image/webp">
-                    <img src="images/converted/house12.jpg" alt="Imagen de la casa 12" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="12">
-                <picture>
-                    <source srcset="images/converted/house13.webp" type="image/webp">
-                    <img src="images/converted/house13.jpg" alt="Imagen de la casa 13" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="13">
-                <picture>
-                    <source srcset="images/converted/house14.webp" type="image/webp">
-                    <img src="images/converted/house14.jpg" alt="Imagen de la casa 14" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="14">
-                <picture>
-                    <source srcset="images/converted/house15.webp" type="image/webp">
-                    <img src="images/converted/house15.jpg" alt="Imagen de la casa 15" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="15">
-                <picture>
-                    <source srcset="images/converted/house16.webp" type="image/webp">
-                    <img src="images/converted/house16.jpg" alt="Imagen de la casa 16" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="16">
-                <picture>
-                    <source srcset="images/converted/house17.webp" type="image/webp">
-                    <img src="images/converted/house17.jpg" alt="Imagen de la casa 17" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="17">
-                <picture>
-                    <source srcset="images/converted/house18.webp" type="image/webp">
-                    <img src="images/converted/house18.jpg" alt="Imagen de la casa 18" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="18">
-                <picture>
-                    <source srcset="images/converted/house19.webp" type="image/webp">
-                    <img src="images/converted/house19.jpg" alt="Imagen de la casa 19" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="19">
-                <picture>
-                    <source srcset="images/converted/house20.webp" type="image/webp">
-                    <img src="images/converted/house20.jpg" alt="Imagen de la casa 20" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="20">
-                <picture>
-                    <source srcset="images/converted/house21.webp" type="image/webp">
-                    <img src="images/converted/house21.jpg" alt="Imagen de la casa 21" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="21">
-                <picture>
-                    <source srcset="images/converted/house22.webp" type="image/webp">
-                    <img src="images/converted/house22.jpg" alt="Imagen de la casa 22" loading="lazy">
-                </picture>
-            </div>
-            <div class="gallery-item" data-index="22">
-                <picture>
-                    <source srcset="images/converted/house23.webp" type="image/webp">
-                    <img src="images/converted/house23.jpg" alt="Imagen de la casa 23" loading="lazy">
-                </picture>
+                <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_12" alt="Imagen de la casa 12" loading="lazy">
             </div>
         </div>
 
