image view commit

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
         <h2>Galería de Imágenes</h2>
         <div class="gallery-grid">
             <div class="gallery-item" data-index="0">
-                <img src="https://drive.google.com/file/d/1EE8FNmkDIxhradMhfrrhvqLi92gtw-4w/view?usp=sharing" alt="Imagen de la casa 1" loading="lazy">
+                <img src="https://drive.google.com/file/d/1EE8FNmkDIxhradMhfrrhvqLi92gtw-4w/view" alt="Imagen de la casa 1" loading="lazy">
             </div>
             <div class="gallery-item" data-index="1">
-                <img src="https://drive.google.com/file/d/1pLLdfzYIehuV4w9LfytT6FRQfPUUdZn3/view?usp=sharing" alt="Imagen de la casa 2" loading="lazy">
+                <img src="https://drive.google.com/file/d/1pLLdfzYIehuV4w9LfytT6FRQfPUUdZn3/view" alt="Imagen de la casa 2" loading="lazy">
             </div>
             <div class="gallery-item" data-index="2">
-                <img src="https://drive.google.com/file/d/1_ypvWzzsWDhTGlrqWaOqJDE_qHy4mGqL/view?usp=sharing" alt="Imagen de la casa 3" loading="lazy">
+                <img src="https://drive.google.com/file/d/1_ypvWzzsWDhTGlrqWaOqJDE_qHy4mGqL/view" alt="Imagen de la casa 3" loading="lazy">
             </div>
             <div class="gallery-item" data-index="3">
-                <img src="https://drive.google.com/file/d/1ZZHMuhCWkUIiNHAwK2UQ_zGzjtEwDP2F/view?usp=sharing" alt="Imagen de la casa 4" loading="lazy">
+                <img src="https://drive.google.com/file/d/1ZZHMuhCWkUIiNHAwK2UQ_zGzjtEwDP2F/view" alt="Imagen de la casa 4" loading="lazy">
             </div>
             <div class="gallery-item" data-index="4">
                 <img src="https://drive.google.com/uc?export=view&id=TU_ID_DE_ARCHIVO_5" alt="Imagen de la casa 5" loading="lazy">
