images from firebase

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <h2>Galería de Imágenes</h2>
         <div class="gallery-grid">
             <div class="gallery-item" data-index="0">
-                <img src="https://drive.google.com/file/d/1EE8FNmkDIxhradMhfrrhvqLi92gtw-4w/view" alt="Imagen de la casa 1" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse1.jpg?alt=media&token=bd3101cb-f962-4a82-bd9a-9d844af90549" alt="Imagen de la casa 1" loading="lazy">
             </div>
             <div class="gallery-item" data-index="1">
-                <img src="https://drive.google.com/file/d/1pLLdfzYIehuV4w9LfytT6FRQfPUUdZn3/view" alt="Imagen de la casa 2" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse2.jpg?alt=media&token=7e080119-5ca4-44b9-bfe7-3db9cfced3d1" alt="Imagen de la casa 2" loading="lazy">
             </div>
             <div class="gallery-item" data-index="2">
-                <img src="https://drive.google.com/file/d/1_ypvWzzsWDhTGlrqWaOqJDE_qHy4mGqL/view" alt="Imagen de la casa 3" loading="lazy">
+                <img src="https://firebasestorage.googleapis.com/v0/b/shinyhunterapp-d5793.appspot.com/o/house%2Fhouse3.jpg?alt=media&token=0affd299-e1f1-43b3-9a74-6912947ec360" alt="Imagen de la casa 3" loading="lazy">
             </div>
             <div class="gallery-item" data-index="3">
                 <img src="https://drive.google.com/file/d/1ZZHMuhCWkUIiNHAwK2UQ_zGzjtEwDP2F/view" alt="Imagen de la casa 4" loading="lazy">
